# DSIS

./: .gitignore  README.md
lab_multiset/: CMakeLists.txt  Multiset.cpp  Multiset.h  main.cpp  run_lab.sh  run_tests.sh  tests.cpp
lab_post_machine/: CMakeLists.txt  Menu.cpp  Menu.h  PostMachine.cpp  PostMachine.h  PostMachineCommand.cpp  PostMachineCommand.h  PostMachineHead.cpp  PostMachineHead.h  PostMachineTape.cpp  PostMachineTape.h  main.cpp  run_lab.sh  run_tests.sh  tests.cpp
lab_veterinary_accounting_system/: readme.md
laba2_pois/: .coverage  Accountant.py  Accounting_department.py  Bicycle.py  Bilding.py  Book_of_complains.py  Cabinet.py  Call_centre.py  Canteen.py  Car.py  CarNotOK.py  Cash_register.py  Chair.py  CompanyNameEmptyError.py  Company_info.py  Company_name_empty_error.py  Corrector.py  Customer.py  Delivery_schedule.py  Director.py  Envelope.py  Form.py  Furniture.py  Human.py  InvalidEmployeesCountError.py  InvalidFoundationYearError.py  InvalidTaxIdError.py  Mailbox.py  Main_hall.py  Manager.py  Money_check_machine.py  Monitor.py  Motocycle.py  NegativeEmployeesError.py  NegativeMileageError.py  Office_Phone.py  Office_computer.py  Paper.py  Parcel.py  Pen.py  (+21 more)
laba2_pois/tests/: test_all.py
laba3/: Customer_corner.py  Reomend_sistem.py  Sale.py  Shopping_cart.py
laba3/Departments/: Accounting_department.py  Department.py  HR_department.py  IT_department.py  Office.py  Warehouse_department.py
laba3/Errors/: Empty_email_error.py  Empty_name_error.py  Invalid_age_error.py  Invalid_gender_error.py  Invalid_height_error.py  Name_error.py  (+6 more)
(+38 files in other folders)
